--- a/hkube/templates/configmaps/hkube-gc-cm.yaml
+++ b/hkube/templates/configmaps/hkube-gc-cm.yaml
@@ -6,9 +6,9 @@ metadata:
 data:
   NODE_ENV: {{ .Values.env.node_env}}
   HKUBE_LOG_LEVEL: {{ .Values.hkube_gc.env.hkube_log_level | quote }}
-  METRICS_PORT: {{ .Values.api_server.env.metric_port | quote}}
-  REST_PORT: {{ .Values.api_server.env.rest_port | quote}}
-  BASE_URL_PATH: {{ .Values.api_server.env.base_url_path | quote}}
+  METRICS_PORT: {{ .Values.hkube_gc.env.metric_port | quote}}
+  REST_PORT: {{ .Values.hkube_gc.env.rest_port | quote}}
+  BASE_URL_PATH: {{ .Values.hkube_gc.env.base_url_path | quote}}
   INGRESS_PREFIX: {{ .Values.global.ingress.prefix | quote}}
   CLUSTER_NAME: {{ .Values.global.clusterName | quote}}
   DEFAULT_STORAGE: {{ .Values.env.default_storage | quote}}
