--- a/hkube/templates/hkube-gc-deployment.yaml
+++ b/hkube/templates/hkube-gc-deployment.yaml
@@ -26,7 +26,7 @@ spec:
 {{- if or .Values.global.registry_password .Values.global.image_pull_secret.use_existing }}
       imagePullSecrets:
         - name: {{ .Values.global.image_pull_secret.name }}
-{{- end }}     
+{{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -36,12 +36,12 @@ spec:
         - name: storage-volume
           persistentVolumeClaim:
             claimName: hkube-storage-pvc
-{{- end }}  
+{{- end }}
       serviceAccountName: hkube-gc
       containers:
         - name: hkube-gc
-          image: "{{ .Values.global.registry }}{{ index  .Values "hkube_gc" "image" "repository" }}:{{ index .Values "hkube_gc" "image" "tag" }}"
-          imagePullPolicy: {{ index .Values "image" "pullPolicy" }}
+          image: "{{ .Values.global.registry }}{{ .Values.hkube_gc.image.repository }}:{{ .Values.hkube_gc.image.tag }}"
+          imagePullPolicy: {{ index .Values.image.pullPolicy }}
 {{- if .Values.hkube_gc.healthcheck.enabled }}
           livenessProbe:
             httpGet:
@@ -52,7 +52,7 @@ spec:
             timeoutSeconds: {{ .Values.hkube_gc.healthcheck.timeoutSeconds }}
             failureThreshold: {{ .Values.hkube_gc.healthcheck.failureThreshold }}
 {{- end }}
-{{- if .Values.global.resources_enable }}          
+{{- if .Values.global.resources_enable }}  
           resources:
 {{ toYaml .Values.hkube_gc.resources | indent 12 }}
 {{- else }}
@@ -62,7 +62,7 @@ spec:
           volumeMounts:
             - name: storage-volume
               mountPath: {{ .Values.global.storage.fs.base_directory | quote}}
-{{- end }} 
+{{- end }}
           ports:
             - containerPort: {{ .Values.hkube_gc.env.metric_port }}
               protocol: TCP
