--- a/hkube/templates/hkube-gc-ingress.yaml
+++ b/hkube/templates/hkube-gc-ingress.yaml
@@ -1,7 +1,7 @@
-{{- if .Values.hkube_gc.ingress.enabled -}}
-{{- $fullName := "hkube-gc" -}}
-{{- $servicePort := .Values.hkube_gc.env.rest_port -}}
-{{- $ingressPath := .Values.hkube_gc.ingress.path -}}
+{{- if .Values.gc_service.ingress.enabled -}}
+{{- $fullName := "gc-service" -}}
+{{- $servicePort := .Values.gc_service.env.rest_port -}}
+{{- $ingressPath := .Values.gc_service.ingress.path -}}
 {{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1beta1" }}
 apiVersion: networking.k8s.io/v1beta1
 {{- else }}
@@ -9,7 +9,7 @@ apiVersion: extensions/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
-  name: hkube-gc
+  name: gc-service
   annotations:
 {{- if .Values.global.ingress.use_regex }}
     nginx.ingress.kubernetes.io/rewrite-target: /$2
@@ -22,7 +22,7 @@ metadata:
     kubernetes.io/tls-acme: "true"
 {{- end }}    
   labels:
-    app: hkube-gc
+    app: gc-service
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
     group: {{ .Values.labels.group.value }}
