fix maxBodySize units

--- a/hkube/templates/configmaps/api-server-cm.yaml
+++ b/hkube/templates/configmaps/api-server-cm.yaml
@@ -5,17 +5,17 @@ metadata:
   name: api-server-configmap
 data:
   NODE_ENV: {{.Values.env.node_env}}
-  BASE_URL_PATH: {{index .Values "api_server" "env" "base_url_path" | quote}}
-  DEFAULT_STORAGE: {{index .Values "env" "default_storage" | quote}}
-  STORAGE_ENCODING: {{index .Values.global.storage.encoding | quote}}
-  STORAGE_RESULTS_THRESHOLD: {{index .Values.global.storage.storageResultsThreshold | quote}}
+  BASE_URL_PATH: {{ .Values.api_server.env.base_url_path | quote}}
+  DEFAULT_STORAGE: {{ .Values.env.default_storage | quote}}
+  STORAGE_ENCODING: {{ .Values.global.storage.encoding | quote}}
+  STORAGE_RESULTS_THRESHOLD: {{ .Values.global.storage.storageResultsThreshold | quote}}
 {{- if eq .Values.env.default_storage "fs" }}
   BASE_FS_ADAPTER_DIRECTORY: {{ .Values.global.storage.fs.base_directory | quote}}
 {{- end }}  
-  METRICS_PORT: {{index .Values "api_server" "env" "metric_port" | quote}}
-  PORT: {{index .Values "api_server" "env" "port" | quote}}
-  PIPELINE_DRIVER_CPU: {{index .Values "api_server" "env" "pipeline_driver_cpu" | quote}}
-  PIPELINE_DRIVER_MEM: {{index .Values "api_server" "env" "pipeline_driver_mem" | quote}}
+  METRICS_PORT: {{ .Values.api_server.env.metric_port | quote}}
+  PORT: {{ .Values.api_server.env.port | quote}}
+  PIPELINE_DRIVER_CPU: {{ .Values.api_server.env.pipeline_driver_cpu | quote}}
+  PIPELINE_DRIVER_MEM: {{ .Values.api_server.env.pipeline_driver_mem | quote}}
   INGRESS_PREFIX: {{ .Values.global.ingress.prefix | quote}}
-  BODY_SIZE_LIMIT: {{ .Values.global.ingress.maxBodySize | quote}}
+  BODY_SIZE_LIMIT: {{ .Values.api_server.env.maxBodySize | quote}}
   CLUSTER_NAME: {{ .Values.global.clusterName | quote}}
