--- a/hkube/templates/datasources-service-ingress.yaml
+++ b/hkube/templates/datasources-service-ingress.yaml
@@ -1,12 +1,8 @@
 {{- if .Values.datasources_service.ingress.enabled -}}
 {{- $fullName := "datasources-service" -}}
-{{- $servicePort := .Values.datasources_service.env.port -}}
+{{- $servicePort := .Values.datasources_service.env.port | int -}}
 {{- $ingressPath := .Values.datasources_service.ingress.path -}}
-{{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1beta1" }}
-apiVersion: networking.k8s.io/v1beta1
-{{- else }}
-apiVersion: extensions/v1beta1
-{{- end }}
+apiVersion:  {{ template "ingress.apiVersion" . }}
 kind: Ingress
 metadata:
   name: datasources-service
@@ -42,9 +38,7 @@ spec:
 {{- else }}
         - path: {{ .Values.global.ingress.prefix }}{{ $ingressPath }}
 {{- end }}
-          backend:
-            serviceName: {{ $fullName }}
-            servicePort: {{ $servicePort }}
+          backend: {{- include "ingress.backend" (dict "serviceName" $fullName "servicePort" $servicePort "context" $) | nindent 12 }}
 {{- if .Values.global.ingress.hostname }}
       host: {{ .Values.global.ingress.hostname }}
 {{- end }}
