--- a/hkube/templates/sync-server-deployment.yaml
+++ b/hkube/templates/sync-server-deployment.yaml
@@ -91,11 +91,7 @@ spec:
 
 ---
 {{- $ingressPath := .Values.sync_server.ingress.path -}}
-{{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1beta1" }}
-apiVersion: networking.k8s.io/v1beta1
-{{- else }}
-apiVersion: extensions/v1beta1
-{{- end }}
+apiVersion:  {{ template "ingress.apiVersion" . }}
 kind: Ingress
 metadata:
   annotations:
@@ -126,17 +122,13 @@ spec:
   rules:
   - http:
       paths:
-      - backend:
-          serviceName: sync-server
-          servicePort: 8384
+      - backend: {{- include "ingress.backend" (dict "serviceName" "sync-server" "servicePort" 8384 "context" $) | nindent 10 }}
 {{- if .Values.global.ingress.use_regex }}
         path: {{ .Values.global.ingress.prefix }}{{ $ingressPath }}/ui(/|$)(.*)
 {{- else }}
         path: {{ .Values.global.ingress.prefix }}{{ $ingressPath }}/ui
 {{- end }}
-      - backend:
-          serviceName: sync-server
-          servicePort: 8080
+      - backend: {{- include "ingress.backend" (dict "serviceName" "sync-server" "servicePort" 8080 "context" $) | nindent 10 }}
 {{- if .Values.global.ingress.use_regex }}
         path: {{ .Values.global.ingress.prefix }}{{ $ingressPath }}/sync(/|$)(.*)
 {{- else }}
