--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -463,7 +463,7 @@ resource_manager: # +doc-gen:ignore
 simulator: # +doc-gen:ignore
   env:
     hkube_log_level: '2'
-    metric_port: 9050
+    port: 9050
     monitor_backend_path: /hkube/monitor-server/
     monitor_backend_path_socketio: /hkube/monitor-server/socket.io
     monitor_backend_use_location: 'true'
