--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -72,8 +72,6 @@ labels: # +doc-gen:ignore
     value: 'true'
   group:
     value: hkube
-etcd-operator: # +doc-gen:ignore
-  enable: false
 etcd:
   enable: true
   # set number of replicas. defualt 3
@@ -490,7 +488,7 @@ resource_manager: # +doc-gen:ignore
 simulator: # +doc-gen:ignore
   env:
     hkube_log_level: '2'
-    metric_port: 9050
+    port: 9050
     monitor_backend_path: /hkube/monitor-server/
     monitor_backend_path_socketio: /hkube/monitor-server/socket.io
     monitor_backend_use_location: 'true'
