--- a/hkube/templates/monitor-server-ingress.yaml
+++ b/hkube/templates/monitor-server-ingress.yaml
@@ -43,6 +43,7 @@ spec:
         - path: {{ .Values.global.ingress.prefix }}{{ $ingressPath }}
 {{- end }}
           backend: {{- include "ingress.backend" (dict "serviceName" $fullName "servicePort" $servicePort "context" $) | nindent 12 }}
+          pathType: ImplementationSpecific
 {{- if .Values.global.ingress.hostname }}
       host: {{ .Values.global.ingress.hostname }}
 {{- end }}
@@ -86,6 +87,7 @@ spec:
         - path: {{ .Values.global.ingress.prefix }}{{ $datasource_proxy_path }}
 {{- end }}
           backend: {{- include "ingress.backend" (dict "serviceName" $datasource_proxy_service_name "servicePort" $datasource_proxy_service_port "context" $) | nindent 12 }}
+          pathType: ImplementationSpecific
 {{- if .Values.global.ingress.hostname }}
       host: {{ .Values.global.ingress.hostname }}
 {{- end }}            
