--- a/hkube/templates/simulator-ingress.yaml
+++ b/hkube/templates/simulator-ingress.yaml
@@ -51,6 +51,7 @@ spec:
         - path: {{ .Values.global.ingress.prefix }}{{ .Values.simulator.ingress.path }}
 {{- end }}
           backend: {{- include "ingress.backend" (dict "serviceName" $fullName "servicePort" $servicePort "context" $) | nindent 12 }}
+          pathType: ImplementationSpecific
 {{- if .Values.simulator.ingress.alt_path }}
 {{- if .Values.global.ingress.use_regex }}
         - path: {{ .Values.global.ingress.prefix }}{{ .Values.simulator.ingress.alt_path }}(/|$)(.*)
@@ -58,6 +59,7 @@ spec:
         - path: {{ .Values.global.ingress.prefix }}{{ .Values.simulator.ingress.alt_path }}
 {{- end }}
           backend: {{- include "ingress.backend" (dict "serviceName" $fullName "servicePort" $servicePort "context" $) | nindent 12 }}
+          pathType: ImplementationSpecific
 {{- end }}
 
 {{- if .Values.global.ingress.hostname }}
