--- a/hkube/templates/sync-server-deployment.yaml
+++ b/hkube/templates/sync-server-deployment.yaml
@@ -123,12 +123,14 @@ spec:
   - http:
       paths:
       - backend: {{- include "ingress.backend" (dict "serviceName" "sync-server" "servicePort" 8384 "context" $) | nindent 10 }}
+        pathType: ImplementationSpecific
 {{- if .Values.global.ingress.use_regex }}
         path: {{ .Values.global.ingress.prefix }}{{ $ingressPath }}/ui(/|$)(.*)
 {{- else }}
         path: {{ .Values.global.ingress.prefix }}{{ $ingressPath }}/ui
 {{- end }}
       - backend: {{- include "ingress.backend" (dict "serviceName" "sync-server" "servicePort" 8080 "context" $) | nindent 10 }}
+        pathType: ImplementationSpecific
 {{- if .Values.global.ingress.use_regex }}
         path: {{ .Values.global.ingress.prefix }}{{ $ingressPath }}/sync(/|$)(.*)
 {{- else }}
